--- a/produtos.html
+++ b/produtos.html
@@ -7,13 +7,17 @@
   </head>
   <body>
     <header>
+      <div class="caixa">
       <h1><img src="logo.png"></hi>
 
+        <nav>
         <ul>
-          <li><a> href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="produts.html" >Produtos</a></li>
           <li><a href="Contato.html">Contato</a></li>
         </ul>
+        </nav>
+        </div>
     </header>
   </body>
 </html>
