--- a/produtos.html
+++ b/produtos.html
@@ -23,9 +23,24 @@
 
 <main>
   <ul class="produtos">
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>
+     <h2>Cabelo</h2> 
+      <img src="cabelo.jpg">
+      <p class="produto-descricao">Na tesoura ou máquina</p>
+      <P class="produto-preco">R$ 30,00</P>
+    </li>
+    <li>
+      <h2>Barba</h2> 
+      <img src="Barba.jpg">
+      <p class="produto-descricao">Corte e desenho profissional</p>
+      <P class="produto-preco">R$ 20,00</P>
+    </li>
+    <li>
+      <h2>Cabelo + Barba </h2> 
+      <img src="cabelo+barba.jpg">
+      <p class="produto-descricao">Pacote completo</p>
+      <P class="produto-preco">R$ 45,00</P>
+    </li>
   </ul>
 </main>
   </body>
