--- a/produtos.html
+++ b/produtos.html
@@ -42,6 +42,11 @@
       <P class="produto-preco">R$ 45,00</P>
     </li>
   </ul>
-</main>
+  <main>
+    <foooter>
+  <img src+"logo-branca.png">
+  <p"class="copyright">&copy;criado por Lucas- 2025</p>
+    </foooter>
+    
   </body>
 </html>
