--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-		</header>
+      <div class="caixa">
+      <h1><img src="logo.png"></hi>
+
+        <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="produts.html" >Produtos</a></li>
+          <li><a href="Contato.html">Contato</a></li>
+        </ul>
+        </nav>
+        </div>
+    </header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
