--- a/contato.html
+++ b/contato.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Produtos</title>
-    <link rel="stylesheet" href="rest.css">
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="contato.css">
   </head>
   <body>
     <header>
@@ -21,32 +21,9 @@
         </div>
     </header>
 
-<main>
-  <ul class="produtos">
-    <li>
-     <h2>Cabelo</h2> 
-      <img src="cabelo.jpg">
-      <p class="produto-descricao">Na tesoura ou máquina</p>
-      <P class="produto-preco">R$ 30,00</P>
-    </li>
-    <li>
-      <h2>Barba</h2> 
-      <img src="Barba.jpg">
-      <p class="produto-descricao">Corte e desenho profissional</p>
-      <P class="produto-preco">R$ 20,00</P>
-    </li>
-    <li>
-      <h2>Cabelo + Barba </h2> 
-      <img src="cabelo+barba.jpg">
-      <p class="produto-descricao">Pacote completo</p>
-      <P class="produto-preco">R$ 45,00</P>
-    </li>
-  </ul>
-  <main>
     <foooter>
   <img src+"logo-branca.png">
   <p"class="copyright">&copy;criado por Lucas- 2025</p>
     </foooter>
-    
   </body>
 </html>
