--- a/contato.html
+++ b/contato.html
@@ -21,6 +21,21 @@
         </div>
     </header>
 
+   <main>
+   <form>
+    <label for="nomesobrenome">Nome e sobrenome</label>
+    <input type="text" id="nomesobrenome">
+
+    <label for="email">Email</label>
+    <input type="text" id="email">
+
+    <label for="telefone">Telefone</label>
+    <input type="text" id="telefone">
+
+    <input type="submit" value="Enviar formulário">
+   </form>
+   </main>
+
     <foooter>
   <img src+"logo-branca.png">
   <p"class="copyright">&copy;criado por Lucas- 2025</p>
