--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,7 @@
    </main>
 
     <foooter>
-  <img src+"logo-branca.png">
+  <img src+"logo-branca.png" alt="Logo da Barbearia Alura"
   <p"class="copyright">&copy;criado por Lucas- 2025</p>
     </foooter>
   </body>
