--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
         </nav>
         </div>
     </header>
-		<img id="banner" src="banner.jpg">
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-	 
+
+		<img class="banner" src="banner.jpg">
+
+		<main>
+		<section class="principal">
+			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+	        <img class="utensilios" src="utensilios.jpg" alt=utensilios">
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
+		</section>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+		<selection class="beneficios">
+			<h3 class="titulo-principal">Benefícios</h3>
 
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
@@ -42,6 +45,11 @@
 			</ul>
 
 			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
+		</selection>
+		</main>
+		<foooter>
+			<img src+"logo-branca.png" alt="Logo da Barbearia Alura">
+			<p"class="copyright">&copy;criado por Lucas- 2025</p>
+			  </foooter>
 	</body>
 </html>
