--- a/produtos.html
+++ b/produtos.html
@@ -44,7 +44,7 @@
   </ul>
   <main>
     <foooter>
-  <img src+"logo-branca.png">
+  <img src+"logo-branca.png" alt="Logo da Barbearia Alura"
   <p"class="copyright">&copy;criado por Lucas- 2025</p>
     </foooter>
     
