--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 				<li class="itens">Profissionais Qualificados</li>
 				<li class="itens>">Pontualidade</li>
 				<li class="itens">Limpeza</li>
-			</ul>
-
-          <img src="beneficios.jpg" class="imagembeneficios">
-		</di>
+			</ul><img src="beneficios.jpg" class="imagembeneficios">
+		</div>
 		
 			<div class="video">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Hypf_eJfD3mQ2swg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
